[workspace]
members = ["daemon", "proto", "cli"]
resolver = "2"

[workspace.package]
authors = ["Benjamin Brittain <ben@brittain.org>"]
description = "cultivate your code"
version = "0.0.1"
documentation = "https://thelastyak.com/cultivate"

[workspace.dependencies]
tonic = "0.11.0"
prost = "0.12"
tokio-stream = "0.1.14"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
tracing = "0.1"
blake3 = {version = "1.5"}
digest = {version = "*" }
zstd = {version = "0.13.0" }
jj-lib = { path = "../jj/lib" }
jj-cli = { path = "../jj/cli" }
proto = { path = "./proto" }
