[workspace]
members = ["daemon", "proto", "cli"]
resolver = "2"

[workspace.package]
authors = ["Benjamin Brittain <ben@brittain.org>"]
description = "cultivate your code"
version = "0.0.1"
documentation = "https://thelastyak.com/cultivate"

[workspace.dependencies]
async-trait = "0.1.77"
blake3 = "1.5.4"
digest = "0.10"
jj-lib = {version = "0.20", default-features = true}
jj-cli = "0.20"
tonic = "0.11.0"
prost = "0.12"
proto = { path = "./proto" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1"
zstd = "0.13.0"
