[package]
name = "cli"
edition = "2021"
authors.workspace = true
description.workspace = true
version.workspace = true
documentation.workspace = true

[dependencies]
jj-lib.workspace = true
jj-cli.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
proto.workspace = true
async-trait.workspace = true
zstd.workspace = true
tracing.workspace = true
clap = "4.5.0"
itertools = "0.12.1"
futures = "0.3.30"
