[package]
name = "daemon"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
proto = { path = "../proto" }
blake3.workspace = true
tonic-reflection = "0.11.0"
anyhow = "1.0.79"
tempfile = "3.10.0"
prost.workspace = true
zstd.workspace = true
assert_matches = "1.5.0"
fuser = { version = "0.14", features = ["abi-7-31"] }
libc = "0.2.153"
digest.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
tracing-log = "0.2.0"
itertools = "0.12.1"
insta = "1.35.1"
hex = "0.4.3"
tempdir = "0.3.7"
walkdir = "2.5.0"
tracing-test = "0.2.4"
